--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@ layout: base
         {% endif %}
 
         {% if site.compass.author %}
-        <div class="author-container"><h1>{{ site.compass.author }}</h1></div>
+        <div class="author-container">
+          Together with our families <br>
+          <h1>{{ site.compass.author }}</h1>
+          invite you to share <br>
+          in the joy of their marriage
+        </div>
         {% endif %}
     </header>
     <main>
