fix the writing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: base
 
         {% if site.compass.author %}
         <div class="author-container">
-          Together with our families <br>
+          Together with our families
           <h1>{{ site.compass.author }}</h1>
           invite you to share <br>
           in the joy of their marriage
