--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ layout: base
 
         {% if site.compass.author %}
         <div class="author-container">
-          Together with our families
-          <h1>{{ site.compass.author }}</h1>
-          invite you to share <br>
-          in the joy of their marriage
+          <span id="iceland">Together with our families</span>
+          <span id="monofett"><h1>{{ site.compass.author }}</h1></span>
+          <span id="iceland">invite you to share <br>in the joy of their marriage</span>
         </div>
         {% endif %}
     </header>
