--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: base
   <header>
     {% if site.compass.logo %}
     <div class="logo-container">
-      <a class="logo" href="{{ page.baseurl }}" style="background-image: url('{{ site.baseurl }}{{ site.compass.logo }}')"></a>
+      <a class="logo img-circle" href="{{ page.baseurl }}" style="background-image: url('{{ site.baseurl }}{{ site.compass.logo }}')"></a>
     </div>
     {% endif %}
 
@@ -14,7 +14,7 @@ layout: base
     <div class="author-container">
       <span id="iceland">Together with our families</span>
       <span id="monofett"><h1>{{ site.compass.author }}</h1></span>
-      <span id="iceland">invite you to share <br>in the joy of our marriage</span>
+      <span id="iceland">invite you to share <br> in the joy of our marriage</span>
     </div>
     {% endif %}
   </header>
