--- a/rom.html
+++ b/rom.html
@@ -4,7 +4,7 @@ layout: base
 
 
 <p>
-  <h1>Thank you for coming for Jason & Win Nie's Solumnisation.</h1>
+  <h1>Thank you for coming for Jason & Win Nie's Solemnisation.</h1>
 </p>
 
 <p>
