--- a/bridal.html
+++ b/bridal.html
@@ -7,14 +7,15 @@ layout: base
   <h1>This is the address to bridal.</h1>
 </p>
 
-<p>
+<h1>
   Time: 7:00pm, 20 October 2016, Thursday
-</p>
+</h1>
 <p>
-Bridal Shop
-<p>
-40 Petain Road, Singapore 208104
-</p>
+<h1>
+  Mémoire & Co.
+
+  40 Petain Road, Singapore 208104
+</h1>
 <a href="https://www.google.com.sg/maps/dir/Singapore+760723/40+Petain+Road,+208104/@1.3527886,103.8362483,13z/data=!4m13!4m12!1m5!1m1!1s0x31da147173f4461d:0xc2eb0e281722db59!2m2!1d103.82975!2d1.426015!1m5!1m1!1s0x31da19c8cc966813:0xc9de8f69b9a828c9!2m2!1d103.858283!2d1.312333">Map</a>
 
 </p>
