--- a/gallery/index.html
+++ b/gallery/index.html
@@ -17,8 +17,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <![endif]-->
 <meta charset="utf-8">
-<title>blueimp Gallery</title>
-<meta name="description" content="blueimp Gallery is a touch-enabled, responsive and customizable image and video gallery, carousel and lightbox, optimized for both mobile and desktop web browsers. It features swipe, mouse and keyboard navigation, transition effects, slideshow functionality, fullscreen support and on-demand content loading and can be extended to display additional content types.">
+<title>Jason & Winnie's Wedding Photos</title>
+<meta name="description" content="Jason & Winnie's Wedding Photos">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/blueimp-gallery.css">
 <link rel="stylesheet" href="css/blueimp-gallery-indicator.css">
@@ -37,7 +37,7 @@ It features swipe, mouse and keyboard navigation, transition effects, slideshow 
 </ul>
 <p><a href="https://github.com/blueimp/Gallery">blueimp Gallery</a> is based on <a href="http://swipejs.com/">Swipe</a>.</p> -->
 <br>
-<h2>Carousel image gallery</h2>
+<h2>Jason & Winnie's Wedding Photos</h2>
 <!-- The Gallery as inline carousel, can be positioned anywhere on the page -->
 <div id="blueimp-image-carousel" class="blueimp-gallery blueimp-gallery-carousel">
     <div class="slides"></div>
