edit the carousel

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -56,6 +56,7 @@ It features swipe, mouse and keyboard navigation, transition effects, slideshow 
     <a class="play-pause"></a>
 </div>
 <br>
+ -->
 <h2>Lightbox image gallery</h2>
 
 <div id="links" class="links"></div>
@@ -68,7 +69,7 @@ It features swipe, mouse and keyboard navigation, transition effects, slideshow 
     <a class="close">×</a>
     <a class="play-pause"></a>
     <ol class="indicator"></ol>
-</div> -->
+</div>
 <script src="js/blueimp-helper.js"></script>
 <script src="js/blueimp-gallery.js"></script>
 <script src="js/blueimp-gallery-fullscreen.js"></script>
