edit the gallery

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -57,7 +57,7 @@ It features swipe, mouse and keyboard navigation, transition effects, slideshow 
 </div>
 <br>
  -->
-<h2>Lightbox image gallery</h2>
+<h2>Click the photo to browse the gallery</h2>
 
 <div id="links" class="links"></div>
 
