--- a/gallery/index.html
+++ b/gallery/index.html
@@ -26,19 +26,10 @@
 <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
-<!-- <h1>blueimp Gallery</h1>
-<p><a href="https://github.com/blueimp/Gallery">blueimp Gallery</a> is a touch-enabled, responsive and customizable image &amp; video gallery, carousel and lightbox, optimized for both mobile and desktop web browsers.<br>
-It features swipe, mouse and keyboard navigation, transition effects, slideshow functionality, fullscreen support and on-demand content loading and can be extended to display additional content types.</p>
-<ul class="navigation">
-    <li><a href="https://github.com/blueimp/Gallery/tags">Download</a></li>
-    <li><a href="https://github.com/blueimp/Gallery">Source Code</a></li>
-    <li><a href="https://github.com/blueimp/Gallery/blob/master/README.md">Documentation</a></li>
-    <li><a href="https://blueimp.net">&copy; Sebastian Tschan</a></li>
-</ul>
-<p><a href="https://github.com/blueimp/Gallery">blueimp Gallery</a> is based on <a href="http://swipejs.com/">Swipe</a>.</p> -->
+
 <br>
 <h2>Jason & Winnie's Wedding Photos</h2>
-<!-- The Gallery as inline carousel, can be positioned anywhere on the page -->
+
 <div id="blueimp-image-carousel" class="blueimp-gallery blueimp-gallery-carousel">
     <div class="slides"></div>
     <h3 class="title"></h3>
@@ -47,17 +38,8 @@ It features swipe, mouse and keyboard navigation, transition effects, slideshow 
     <a class="play-pause"></a>
 </div>
 <br>
-<!-- <h2>Carousel video gallery</h2>
-<div id="blueimp-video-carousel" class="blueimp-gallery blueimp-gallery-controls blueimp-gallery-carousel">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="play-pause"></a>
-</div>
-<br>
- -->
-<h2>Click the photo to browse the gallery</h2>
+
+<h2>Click on the photo to browse the entire gallery</h2>
 
 <div id="links" class="links"></div>
 
