--- a/gallery/index.html
+++ b/gallery/index.html
@@ -39,7 +39,7 @@
 </div>
 <br>
 
-<h2>Click on the photo to browse the entire gallery</h2>
+<h2>Click on the photo below.</h2>
 
 <div id="links" class="links"></div>
 
