added itinerary + pdf

--- a/itinerary.html
+++ b/itinerary.html
@@ -9,7 +9,8 @@ layout: base
   <main>
     {% if site.compass.include_content %}
     <div class="content">
-      <iframe src="https://docs.google.com/spreadsheets/d/1hDFc_tRvJtmGS7LFOCjgEtQCWTACbD9jk3RN7SFtvvQ/pubhtml?widget=true&amp;headers=false"></iframe>
+      <iframe height="100%" width="100%" src="https://docs.google.com/spreadsheets/d/1hDFc_tRvJtmGS7LFOCjgEtQCWTACbD9jk3RN7SFtvvQ/pubhtml?widget=true&amp;headers=false" ></iframe>
+
     </div>
     {% endif %}
   </main>
