--- a/gallery/index.html
+++ b/gallery/index.html
@@ -17,7 +17,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <![endif]-->
 <meta charset="utf-8">
-<title>Jason & Winnie's Wedding Photos</title>
+<title>Jason & Win Nie's Wedding Photos</title>
 <meta name="description" content="Jason & Winnie's Wedding Photos">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/blueimp-gallery.css">
@@ -28,7 +28,7 @@
 <body>
 
 <br>
-<h2>Jason & Winnie's Wedding Photos</h2>
+<h2>Jason & Win Nie's Wedding Photos</h2>
 
 <div id="blueimp-image-carousel" class="blueimp-gallery blueimp-gallery-carousel">
     <div class="slides"></div>
