--- a/everthing.html
+++ b/everthing.html
@@ -1,10 +1,19 @@
 ---
 layout: base
 ---
+
+
+<h3>Current</h3>
 <ol>
   <li><a href="/itinerary">Itinerary</a></li>
   <li><a href="/ppt.pdf">PPT</a></li>
   <li><a href="/holy.pdf">Holy Matrimony</a></li>
   <li><a href="/gallery">Gallery</a></li>
   <li><a href="/gothere">Getting there</a></li>
+</ol>
+
+<h3>Past</h3>
+<ol>
+  <li><a href="/bridal">Bridal</a></li>
+  <li><a href="/rom">ROM</a></li>
 </ol>
