change image, remove rsvp, added parking

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: base
   <header>
     {% if site.compass.logo %}
     <div class="logo-container">
-      <img class="logo img-thumbnail" src="{{ site.baseurl }}{{ site.compass.logo }}" alt="" />
+      <img class="logo img-thumbnail" src="{{ site.baseurl }}{{ site.compass.logo1 }}" alt="" />
+      <!-- <img class="logo img-thumbnail" src="{{ site.baseurl }}{{ site.compass.logo }}" alt="" /> -->
       <!-- <a class="logo img-circle" href="{{ page.baseurl }}" style="background-image: url('{{ site.baseurl }}{{ site.compass.logo }}')"></a> -->
     </div>
     {% endif %}
